<resources>
    <string name="app_name">Candies For My Love</string>
    <string name="logintext">LOGIN</string>
    <string name="singuptext">New User? Sing Up</string>
    <string name="btnsingup">SING UP</string>
    <string name="btnsave">SAVE</string>
    <string name="btneditlove">EDIT LOVE</string>
    <string name="btnsingupfirst">NEXT</string>
    <string name="lblemail">Email</string>
    <string name="lblpassword">Password</string>
    <string name="lblpasswordconfirm">Confirm Password</string>
    <string name="lblname">Name</string>
    <string name="lblphone">Phone</string>
    <string name="lblmessage">Message </string>
    <string name="lblyourlove">Your Love</string>
    <string name="login">Login</string>
    <string name="loginsuccess">Welcome!</string>
    <string name="logintittlesuccess">Login Success</string>
    <string name="loginfailed">Try Again!</string>
    <string name="logintittlefailed">Login Failed</string>
    <string name="pleasewait">Please Wait</string>
    <string name="connectiontoserver">Connecting to Server</string>
    <string name="sendtext" translatable="false">SEND</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="pleasefillallthefields">Please fill all the fields</string>
    <string name="confirmpasswordnotequal">Confirm password not equal</string>
    <string name="btnuploadimage">Upload Image</string>
    <string name="pleaseselectanimage">Please Select an Image</string>

    <string name="notification">Notification</string>
    <string name="recording">Recording</string>
    <string name="registersucces">Register Success</string>
    <string name="registerfailed">Register Failed, User alredy Exists</string>
    <string name="upload_photo">Subir foto</string>
    <string name="start_validation">Iniciar Validación</string>
    <string name="welcome_message">Bienvenido</string>
    <string name="services_namespace" translatable="false">http://servicesImpl.service.udistrital.edu.co/</string>
    <string name="validar_amor_url" translatable="false">http://dulces-para-mi-amor-ws.herokuapp.com/ValidarAmor?wsdl</string>
    <string name="validar_amor_method" translatable="false">validar</string>
    <string name="ws_registrar_usuario_url" translatable="false">http://proyectoweb-5g07603u.cloudapp.net/ServiceWeb/registrarUsuario/ws_servidor_registrarUsuario.asmx?wsdl</string>
    <string name="ws_namespace" translatable="false">http://tempuri.org/</string>
    <string name="ws_registrar_usuario_method" translatable="false">agregarUsuario</string>
    <string name="ws_autenticar_usuario_url" translatable="false">http://proyectoweb-5g07603u.cloudapp.net/ServiceWeb/autenticarUsuario/ws_servidor_autenticarUsuario.asmx?wsdl</string>
    <string name="ws_autenticar_usuario_method" translatable="false">autenticarUsuario</string>
    <string name="gcm_SenderId" translatable="false">1064958769452</string>
    <string name="title_activity_gcm" translatable="false">GCMActivity</string>
    <string name="ws_generar_token_url" translatable="false">http://proyectoweb-5g07603u.cloudapp.net/ServiceWeb/crearLoginToken/ws_servidor_crearLoginToken.asmx?WSDL</string>
    <string name="ws_generar_token_method" translatable="false">GetTokenForApp</string>
    <string name="ws_validar_amor_url" translatable="false">http://proyectoweb-5g07603u.cloudapp.net/FACE/CheckLove.asmx?wsdl</string>
    <string name="ws_validar_amor_method" translatable="false">CheckLovePhoto</string>
    <string name="ws_enviarfoto_amor_url" translatable="false">http://proyectoweb-5g07603u.cloudapp.net/FACE/Registro.asmx?wsdl</string>
    <string name="ws_validar_amor__method" translatable="false">addImage</string>
    <string name="app_client_name" translatable="false">APPMOVIL</string>
    <string name="app_client_passwod" translatable="false">APPMOVIL</string>

</resources>
