<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="co.edu.udistrital.dulcesparamiamor.HomeActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/welcome_message"
    android:textSize="30dp"
    android:textColor="@color/textorIcons"
    >
</TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_photo"
        android:textColor="@color/textorIcons"
        android:background="@drawable/button_selecter"
        android:onClick="loadImagefromGallery"
        ></Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_validation"
        android:textColor="@color/textorIcons"
        android:background="@drawable/button_selecter"
        android:onClick="startValidation"
        ></Button>

    <Button
        android:id="@+id/btnGetRegId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get RegId"/>

    <EditText
        android:id="@+id/etRegId"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    startValidation
</LinearLayout>
