<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="co.edu.udistrital.dulcesparamiamor.view.MessageActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:textColor="@color/textorIcons"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblmessage"
        android:id="@+id/lblmessage"
        android:textColor="@color/textorIcons"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblmessage"
        android:id="@+id/txtmessage"
        android:textColor="@color/textorIcons"
        android:inputType="textImeMultiLine" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblphone"
            android:layout_below="@id/txtmessage"
            android:id="@+id/lblphone"
            android:textColor="@color/textorIcons"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblphone"
            android:id="@+id/txtphone"
            android:inputType="phone"
            android:ems="10"
            android:textColor="@color/textorIcons"
            />   <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendtext"
        android:id="@+id/btnsend"
        android:gravity="center"
        android:layout_below="@+id/txtphone"
        android:background="@drawable/button_selecter"
        android:textColor="@color/textorIcons"
        />
    </RelativeLayout>

</LinearLayout>
