<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.RegisterLoverActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textColor="@color/textorIcons"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textorIcons"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/lblyourlove"
            ></TextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblname"
                android:id="@+id/lblname"
                android:textColor="@color/textorIcons"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblname"
                android:id="@+id/txtname"
                android:text="Andrea"
                android:textColor="@color/textorIcons"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblphone"
                android:id="@+id/lblphone"
                android:layout_below="@+id/txtname"
                android:textColor="@color/textorIcons"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblphone"
                android:id="@+id/txtphone"
                android:text="3124606233"
                android:inputType="phone"
                android:textColor="@color/textorIcons"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblemail"
                android:layout_below="@id/txtphone"
                android:id="@+id/lblemail"
                android:textColor="@color/textorIcons"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblemail"
                android:text="andrea2007@hotmail.com"
                android:id="@+id/txtemail"
                android:inputType="textEmailAddress"
                android:textColor="@color/textorIcons"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lblfacebook"
                android:layout_below="@+id/txtemail"
                android:text="Facebook"
                android:textColor="@color/textorIcons"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtfacebook"
                android:layout_below="@id/lblfacebook"
                android:text="andrea2007@hotmail.com"
                android:textColor="@color/textorIcons"
                android:inputType="textEmailAddress"
                >
            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnsingup"
                android:id="@+id/button"
                android:gravity="center"
                android:layout_below="@id/txtfacebook"
                android:background="@drawable/button_selecter"
                android:textColor="@color/textorIcons"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>

