<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".view.EditLoveActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textColor="@color/textorIcons"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textorIcons"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/lblyourlove"
            ></TextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnuploadimage"
                android:id="@+id/btnuploadimage"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_selecter"
                android:textColor="@color/textorIcons"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/image_selector"
                android:textColor="@color/textorIcons"
                android:layout_below="@+id/btnuploadimage"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
